[metadata]
name = test_tools
description = Tools for testing hive software
url = gitlab.syncad.com/hive/test-tools
author = Piotr Batko
author_email = pbatko@syncad.com

[options]
package_dir = =package
packages = find:
python_requires = >=3.8
install_requires=
    requests==2.27.1

[options.packages.find]
where = package
